--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "quasar": "^1.0.0",
     "vue-chartjs": "^3.5.1"
   },
