--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,8 +11,6 @@ services:
     depends_on:
       - qdrant
   qdrant:
-    image: generall/qdrant:latest
-    ports:
-    - 6333:6333
+    image: generall/qdrant:3.4
     volumes:
       - ./data/qdrant_storage:/qdrant/storage
