--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,25 @@
-version: '3.7'
+version: "3.7"
 
 services:
   web:
     build: .
     container_name: goods_categorizer_web
-    ports:
-      - 8000:8000
     environment:
-      - QDRANT_HOST=qdrant
+      - QDRANT_HOST=qdrant_categorizer
     depends_on:
-      - qdrant
-  qdrant:
-    image: generall/qdrant:3.4
+      - qdrant_categorizer
+    networks:
+      - qdrant-net
+
+  qdrant_categorizer:
+    image: generall/qdrant:v0.3.5
     volumes:
       - ./data/qdrant_storage:/qdrant/storage
+
+    networks:
+      - qdrant-net
+
+networks:
+  qdrant-net:
+    external:
+      name: qdrant-net
